--- a/css/main.css
+++ b/css/main.css
@@ -651,6 +651,7 @@ footer .router-link-active {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
   padding: 0;
   margin: 0 0 16px 0;
 }
