--- a/css/main.css
+++ b/css/main.css
@@ -152,9 +152,12 @@ header h1 {
   margin: 0;
 }
 main {
-  max-width: 720px;
+  max-width: 1080px;
   padding: 16px;
   margin: 0 auto;
+}
+.max-720 {
+  max-width: 720px;
 }
 .with.app-bar {
   margin-top: 56px;
@@ -434,10 +437,10 @@ h2 > .c-icon {
 }
 
 /* alignment */
-.grid-1-3, .grid-2, .grid-3, .grid-7 {
+.grid-1-2, .grid-1-3, .grid-2, .grid-3, .grid-7 {
   display: grid;
 }
-.grid-1-3 {
+.grid-1-2, .grid-1-3 {
   grid-template-columns: repeat(1, 1fr);
 }
 .grid-2 {
@@ -752,6 +755,9 @@ main.large-app-bar {
 /* media query */
 @media (min-width: 720px) {
   /* alignment */
+  .grid-1-2 {
+    grid-template-columns: repeat(2, 2fr);
+  }
   .grid-1-3 {
     grid-template-columns: repeat(3, 3fr);
   }
